--- a/js_libs/third-js-libs/metro/v4/css/metro-all.css
+++ b/js_libs/third-js-libs/metro/v4/css/metro-all.css
@@ -11177,6 +11177,9 @@ div {
 .h-100 {
   height: 100% !important;
 }
+.h-90{
+  height: 90% !important;
+}
 .mh-100 {
   max-height: 100% !important;
 }
