mmc_client file upload

--- a/js_libs/third-js-libs/metro/v4/css/schemes/red-mirohost.css
+++ b/js_libs/third-js-libs/metro/v4/css/schemes/red-mirohost.css
@@ -108,6 +108,11 @@ textarea.focused,
   background-color: #B00015;
   color: #ffffff;
 }
+
+.input .backend {
+  background-color: #B00015;
+  color: #ffffff;
+}
 .input input,
 .select input,
 .textarea input,
