--- a/js_libs/third-js-libs/metro/v4/css/metro-all.css
+++ b/js_libs/third-js-libs/metro/v4/css/metro-all.css
@@ -11179,6 +11179,10 @@ div {
 .h-90{
   height: 90% !important;
 }
+
+.h-10 {
+    height: 10% !important;
+}
 .mh-100 {
   max-height: 100% !important;
 }
