--- a/js_libs/third-js-libs/metro/v4/css/metro-all.css
+++ b/js_libs/third-js-libs/metro/v4/css/metro-all.css
@@ -18551,6 +18551,7 @@ aside::after {
   -webkit-box-shadow: 0 0 0 3px rgba(228, 228, 228, 0.45);
           box-shadow: 0 0 0 3px rgba(228, 228, 228, 0.45);
 }
+
 .command-button .icon,
 .image-button .icon {
   width: 2.6875rem;
@@ -21905,6 +21906,30 @@ html.metro-touch-device .streamer .stream.focused .stream-icon {
     -webkit-box-shadow: 0 0 0 0 rgba(27, 161, 226, 0.45);
             box-shadow: 0 0 0 0 rgba(27, 161, 226, 0.45);
   }
+}
+
+@keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        transform: rotate(0deg);
+        -webkit-transform-origin: center;
+        -ms-transform-origin: center;
+        transform-origin: center;
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        transform: rotate(360deg);
+        -webkit-transform-origin: center;
+        -ms-transform-origin: center;
+        transform-origin: center;
+    }
+}
+
+.ani-rotate {
+    -webkit-animation: spin 5s linear infinite;
+    animation: spin 5s linear infinite;
 }
 .ani-spin,
 .ani-hover-spin:hover {
